delete homepage.js
