# api/swagger/swagger.yaml
@@ -18,64 +18,6 @@ consumes:
 produces:
   - application/json
 paths:
-  /:
-    x-swagger-router-controller: homepage
-    get:
-      operationId: homepage
-      produces:
-        - text/html; charset=utf-8
-      responses:
-        200:
-          description: Success
-          schema:
-            type: string
-  /material.css:
-    x-swagger-router-controller: homepage
-    get:
-      operationId: material_css
-      produces:
-        - text/css; charset=utf-8
-      responses:
-        200:
-          description: Success
-          schema:
-            type: string
-  /templates/{name}:
-    x-swagger-router-controller: homepage
-    get:
-      operationId: templates
-      parameters:
-        - name: name
-          type: string
-          in: path
-          required: true
-      produces:
-        - text/html; charset=utf-8
-      responses:
-        200:
-          description: Success
-          schema:
-            type: string
-  /libs/{folder}/{name}:
-    x-swagger-router-controller: homepage
-    get:
-      operationId: libs
-      parameters:
-        - name: folder
-          type: string
-          in: path
-          required: true
-        - name: name
-          type: string
-          in: path
-          required: true
-      produces:
-        - text/javascript; charset=utf-8
-      responses:
-        200:
-          description: Success
-          schema:
-            type: string
   /events:
       x-swagger-router-controller: event
       get:
